style.css
@font-face {
    font-family: 'Grand Hotel';
    src: url('fonts/GrandHotel-Regular.ttf') format('truetype');
}
@font-face {
    font-family: 'Lato';
    src: url('fonts/Lato-Regular.ttf') format('truetype');
    font-weight: 400;
}
* {
    margin: 0;
    padding: 0;
    font-family: 'Lato';
}
header {
    background-image: 
        linear-gradient(rgba(255, 0, 0, 0.6), rgba(255, 0, 0, 0.6)),
        url('./img/bg_header.png');

    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
.wrapper {
    width: 1204px;
    margin: auto;
}
.navbar {
    overflow: hidden;
    margin-bottom: 92px;
}
.card_logo {
    text-align: center;
    margin-top: 56px;
    margin-bottom: 39px;
}
.card_logo img {
    width: 208px;
    height: 60px;
}
nav ul {
    display: flex;
    justify-content: center;
    gap: 40px;
}
nav ul li {
    list-style: none;
}
nav ul li a {
    text-decoration: none;
    color: white;
}
.card_text {
    text-align: center;
    color: white;
}
.card_text h1 {
    font-family: 'Grand Hotel', cursive;
    font-size: 180px;
    font-weight: normal;
    line-height: 1;
}
.card_text p {
    font-size: 23px;
    margin-bottom: 46px;
}
.card_text button {
    padding: 10px 50px 10px 50px;
    border-radius: 20px;
    border: none;
    color:#e8565e;
    font-size: 16px;
    font-weight: bold;
    margin-bottom: 103px;
}

/* Section-one */
#section_one {
    background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 1)),
    url('./img/bg_section-one.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    border: 1px solid transparent;
}
#section_one .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    margin-top: 72px;
    margin-bottom: 82px;
}
#section_one .container h1 {
    color: #e8565e;
    font-size: 80px;
    font-family: 'Grand Hotel', cursive;
    font-weight: normal;
}
#section_one .container .card_desc_one{
    margin-bottom: 79px;
    color: #333334;
    font-size: 20px;
}
#section_one .container .card_container {
    display: flex;
    justify-content: space-between;
}
.container .card_container .card {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.container .card_container .card .card_img img {
    border-radius: 50%;
    padding: 20px 5px;
}
.container .card_container .card .card_text h3 {
    color: #e8565e;
    font-size: 46px;
    font-family: 'Grand Hotel', cursive;
    font-weight: normal;
}
.container .card_container .card .card_text p {
    font-size: 16px;
    color: #333334;
}

/*Section-two*/
#section_two {
    background-image: 
        linear-gradient(rgba(255, 0, 0, 0.6), rgba(255, 0, 0, 0.6)),
        url('./img/bg_section-two.png');

    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    color: white;
}
#section_two .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
}
#section_two .container h1 {
    text-align: center;
    margin-bottom: 42px;
    margin-top: 150px;
    font-size: 80px;
    font-family: 'Grand Hotel', cursive;
    font-weight: normal;
}
#section_two .container .card_desc_one {
    margin-bottom: 112px;
    text-align: center;
    font-size: 20px;
}
#section_two .container .card_container {
    display: flex;
    justify-content: space-between;
}
#section_two .container .card_container .card .card_desc{
    text-align: center;
    position: relative;
    top: -250px;
}
#section_two .container .card_container .card .card_desc 
.desc_one {
    font-size: 48px;
    font-weight: bold;
    padding-bottom: 20px;
}
#section_two .container .card_container .card .card_desc
.desc_two {
    font-size: 36px;
}

/*Section three*/
#section_three {
    background-color: #F2E7CC;
    border: 1px solid transparent;
}
#section_three .container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 72px;
    margin-bottom: 82px;
}
#section_three .container .card_title {
    font-family: 'Grand Hotel', cursive;
    font-weight: normal;
    color: #e8565e;
}
#section_three .container h1 {
    font-size: 80px;
}
#section_three .container .card_desc_one {
    font-size: 20px;
    margin-bottom: 50px;
    text-align: center;
}
#section_three .container p {
    color:#3d3d3d;
}
#section_three .container .card_container {
    display: flex;
    gap: 100px;
}
#section_three .container .card_container .card {
    display: flex;
    flex-direction: row;
    align-items:flex-start;
    margin-bottom: 40px;

}
#section_three .container .card_container .card .card_img {
    margin-right: 20px;
}
#section_three .container .card_container .card .card_text {
    text-align: left;
}
#section_three .container .card_container .card .card_text h3 {
    font-size: 36px;
}
#section_three .container .card_container .card .card_text p {
    font-size: 16px;
}
#section_three .container .card_container .card_four {
    display: flex;
    flex-direction: row;
    align-items:flex-start;
    margin-left: 20px;
    margin-top: 40px;
}
#section_three .container .card_container .card_four .card_img {
    margin-right: 20px;
    margin-top: 20px;
}
#section_three .container .card_container .card_four .card_text {
    margin-left: 15px;
    text-align: left;
}
#section_three .container .card_container .card_four .card_text h3 {
    font-size: 36px;
}
#section_three .container .card_container .card_four .card_text p {
    font-size: 16px;
}

 /*Section four*/
#section_four .container {
    display: grid;
    grid-template-columns: 1fr 1fr;
}
#section_four .card_img {
    background-image: 
        linear-gradient(rgba(255, 0, 0, 0.6), rgba(255, 0, 0, 0.6)),
        url('./img/img_section_four.png');
    background-repeat: no-repeat;
    background-position: center;
    object-fit: cover;
    width: 706px;
    height: 974px;
}
#section_four .card_body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 80px;
    margin-right: 80px;
}
#section_four .card_body .card_title {
    font-family: 'Grand Hotel', cursive;
    font-weight: normal;
    font-size: 72px;
    color: #FF4C55;
}
#section_four .card_body .card_desc {
    font-size: 20px;
    color:#3d3d3d;
    margin-bottom: 20px;
}
#section_four .card_body button {
    background-color: #FF4C55;
    border-radius: 20px;
    width: 210px;
    color: white;
    border: none;
    padding: 12px 0;
    white-space: nowrap;
    font-weight: bold;
}

/* Section five */
#section_five {
    background-color: #F2E7CC;
    border: 1px solid transparent;
}
#section_five .container {
    margin-top: 72px;
    margin-bottom: 82px;
}
#section_five .card_title {
    font-family: 'Grand Hotel', cursive;
    font-weight: normal;
    color: #eb4d55;
}
#section_five p {
    color: #3d3d3d;
}
#section_five h2,.card_desc_one {
    text-align: center;
}
 #section_five h2 {
    font-size: 72px;
}
#section_five .card_desc_one {
    font-size: 20px;
    margin-top: 10px;
    margin-bottom: 50px;
}
#section_five .card_container {
    display: flex;
    justify-content: center;
    gap: 40px;
}
#section_five .card {
    background-color: #FCF5E4;
    border: 1px solid transparent;
    border-radius: 10px;
    padding: 50px 20px 20px 20px;
}
#section_five .card_container h3 {
    font-size: 36px;
    margin-top: 40px;
}
#section_five .card_container p {
    text-align: center;
    margin: 10px 0 20px 0;
}
#section_five button {
    background-color: #FF4C55;
    border-radius: 20px;
    width: 210px;
    color: white;
    border: none;
    padding: 12px 0;
}

